--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
 html, body {
   height: 100%;
   width: 100%;
+  background-color: lightblue;
 }
 
+.headersub{
 
+  font-size: 35px;
+  text-align: center;
+  color:black;
+  text-decoration: none;
+  text-align: center;
+
+}
 
 .navbar {
   background-color: #333;
