--- a/style.css
+++ b/style.css
@@ -1,38 +1,73 @@
-html, body {
-  height: 100%;
-  width: 100%;
-  background-color: lightblue;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.headersub{
-  font-size: 35px;
-  text-align: center;
-  color:black;
-  text-decoration: none;
-  text-align: center;
+body {
+  background-color: #f1ede4;
+}
 
+.container {
+  position: relative;
+  min-height: 100vh;
+}
+
+/* Colors: 
+ #F1EDE4 --> white
+ #9C7448 --> brown
+ #CC9775 --> light bown
+ #814A37 --> redish brown
+ #2B2E33 --> dark navy blue
+*/
+
+/* ----------------------Navbar-------------------------- */
+ul {
+  list-style: none;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
 }
 
 .navbar {
-  background-color: #333;
   overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  background-color: #2b2e33;
 }
 
 .navbar a {
-  float: left;
-  display: block;
+  float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
-.navbar a:hover {
+li a:hover {
   background-color: #ddd;
   color: black;
 }
 
+/* ----------------------Footer-------------------------- */
+
+footer {
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  height: 3rem;
+  bottom: 0;
+}
+
+footer section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer a {
+  color: #f1ede4;
+  padding-left: 25px;
+  padding-top: 15px;
+}
