--- a/style.css
+++ b/style.css
@@ -123,3 +123,86 @@ footer a {
 .links button:hover a {
   color: #f1ede4;
 }
+
+.headersub{
+
+  font-size: 35px;
+  text-align: center;
+  color:black;
+  text-decoration: none;
+  text-align: center;
+
+}
+
+
+.container5 {
+  position: relative;
+  display: block;
+  width: 60%;
+  margin-right: auto;
+ color: white;
+ text-decoration: none;
+}
+
+.paragraphs{
+
+
+   position: relative;
+  display: block;
+  width: 60%;
+  margin-left: auto;
+ 
+ text-decoration: none;
+  color: black;
+   font-size:20px
+}
+
+
+.container6 {
+  position: relative;
+  display: block;
+  width: 60%;
+  margin-left: auto;
+ color: white;
+ text-decoration: none;
+
+}
+
+.paragraphs1{
+   position: relative;
+  display: block;
+  width: 60%;
+ 
+ text-decoration: none;
+  color: black;
+  font-size:20px;
+  margin-left: auto;
+  margin-right: auto;right
+}
+/*contact*/
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px; 
+  border: 1px solid #ccc;
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
+}
+input[type=submit] {
+  background-color: #cc9775;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
