--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@ footer a {
   color: #f1ede4;
 }
 
+/* ----------------------Works-------------------------- */
+
 .headersub{
 
   font-size: 35px;
@@ -133,7 +135,6 @@ footer a {
   text-align: center;
 
 }
-
 
 .container5 {
   position: relative;
@@ -163,9 +164,8 @@ footer a {
   display: block;
   width: 60%;
   margin-left: auto;
- color: white;
- text-decoration: none;
-
+  color: white;
+  text-decoration: none;
 }
 
 .paragraphs1{
@@ -179,7 +179,14 @@ footer a {
   margin-left: auto;
   margin-right: auto;right
 }
-/*contact*/
+
+/* ----------------------Blogs-------------------------- */
+.blogs {
+  display: flex; 
+  justify-content: space-evenly; 
+}
+
+/*------------contact-------------------*/
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px; 
@@ -199,5 +206,6 @@ input[type=submit] {
   cursor: pointer;
 }
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #2B2E33;
 }
+
